<resources>
    <string name="app_name">My Application Test</string>

    <string name="back">Back</string>
    <string name="avengers_movie_name">Avengers: End Game</string>
    <string name="movie_name_2">Tenet</string>
    <string name="movie_name_3">Black Widow</string>
    <string name="movie_name_4">Wonder Woman 1984</string>
    <string name="avengers_movie_tags">Action, Adventure, Drama</string>
    <string name="movies_tags_2">Action, Sci-Fi, Thriller</string>
    <string name="movies_tags_3">Action, Adventure, Sci-Fi</string>
    <string name="movies_tags_4">Action, Adventure, Fantasy</string>
    <string name="storyline_title">Storyline</string>
    <string name="cast_title">Cast</string>
    <string name="age_restrictions">+</string>
    <string name="reviews_count"> Reviews</string>
    <string name="storyline">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="movie_cast_1_name">Robert Downey Jr.</string>
    <string name="movie_cast_2_name">Chris Evans</string>
    <string name="movie_cast_3_name">Mark Ruffalo</string>
    <string name="movie_cast_4_name">Chris Hemsworth</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_duration"> MIN</string>
    <string name="movie_name">Avengers:End Game</string>
    <string name="movies_list_title">Movies list</string>
</resources>