<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/crv_item_movies"
    android:background="@color/background_color"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

  <ImageView
            android:id="@+id/ivMoviesList"
            android:layout_width="170dp"
            android:layout_height="296dp"
            android:background="@drawable/ic_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_movie_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/spacing_0_5x"
            android:layout_marginTop="@dimen/spacing_0_5x"
            android:layout_marginEnd="@dimen/spacing_0_5x"
            android:layout_marginBottom="@dimen/spacing_12x"
            android:scaleType="center"
            android:src="@drawable/movie"
            app:layout_constraintBottom_toBottomOf="@+id/ivMoviesList"
            app:layout_constraintEnd_toEndOf="@+id/ivMoviesList"
            app:layout_constraintStart_toStartOf="@+id/ivMoviesList"
            app:layout_constraintTop_toTopOf="@+id/ivMoviesList" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/spacing_0_5x"
            android:layout_marginTop="@dimen/spacing_0_5x"
            android:layout_marginEnd="@dimen/spacing_0_5x"
            android:layout_marginBottom="@dimen/spacing_12x"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_mask__movies"
            app:layout_constraintBottom_toBottomOf="@+id/ivMoviesList"
            app:layout_constraintEnd_toEndOf="@+id/ivMoviesList"
            app:layout_constraintStart_toStartOf="@+id/ivMoviesList"
            app:layout_constraintTop_toTopOf="@+id/ivMoviesList" />

        <ImageView
            android:id="@+id/iv_like"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="146dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="@dimen/spacing_2x"
            android:src="@drawable/ic_like"
            app:layout_constraintEnd_toEndOf="@+id/ivMoviesList"
            app:layout_constraintStart_toStartOf="@+id/ivMoviesList"
            app:layout_constraintTop_toTopOf="@+id/ivMoviesList" />

        <TextView
            android:id="@+id/tv_year"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="@dimen/spacing_2x"
            android:layout_marginTop="@dimen/spacing_2x"
            android:background="@drawable/ic_rectangle__movie"
            android:backgroundTint="@color/background_color"
            android:gravity="center"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_size_body"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/ivMoviesList"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/ivMoviesList"
            app:layout_constraintTop_toTopOf="@+id/ivMoviesList"
            tools:text="@string/age_restrictions"/>

        <TextView
            android:id="@+id/tv_movie_tags"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="214dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="70dp"
            android:text="@string/avengers_movie_tags"
            android:textColor="@color/pink_dark"
            android:textSize="@dimen/text_size_movie_tags"
            app:layout_constraintEnd_toEndOf="@+id/ivMoviesList"
            app:layout_constraintStart_toStartOf="@+id/ivMoviesList"
            app:layout_constraintTop_toTopOf="@+id/ivMoviesList" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/spacing_2x"
            android:layout_marginTop="230dp"
            android:layout_marginEnd="154dp"
            android:src="@drawable/ic_star_icon__movie"
            app:layout_constraintEnd_toEndOf="@+id/ivMoviesList"
            app:layout_constraintStart_toStartOf="@+id/ivMoviesList"
            app:layout_constraintTop_toTopOf="@+id/ivMoviesList"
            app:tint="@color/pink_light" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="230dp"
            android:layout_marginEnd="144dp"
            android:src="@drawable/ic_star_icon__movie"
            app:layout_constraintEnd_toEndOf="@+id/ivMoviesList"
            app:layout_constraintStart_toStartOf="@+id/ivMoviesList"
            app:layout_constraintTop_toTopOf="@+id/ivMoviesList"
            app:tint="@color/pink_light" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="230dp"
            android:layout_marginEnd="134dp"
            android:src="@drawable/ic_star_icon__movie"
            app:layout_constraintEnd_toEndOf="@+id/ivMoviesList"
            app:layout_constraintStart_toStartOf="@+id/ivMoviesList"
            app:layout_constraintTop_toTopOf="@+id/ivMoviesList"
            app:tint="@color/pink_light" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="38dp"
            android:layout_marginTop="230dp"
            android:layout_marginEnd="124dp"
            android:src="@drawable/ic_star_icon__movie"
            app:layout_constraintEnd_toEndOf="@+id/ivMoviesList"
            app:layout_constraintStart_toStartOf="@+id/ivMoviesList"
            app:layout_constraintTop_toTopOf="@+id/ivMoviesList"
            app:tint="@color/pink_light" />

        <ImageView
            android:id="@+id/star_movie"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="230dp"
            android:layout_marginEnd="114dp"
            android:src="@drawable/ic_star_icon__movie"
            app:layout_constraintEnd_toEndOf="@+id/ivMoviesList"
            app:layout_constraintStart_toStartOf="@+id/ivMoviesList"
            app:layout_constraintTop_toTopOf="@+id/ivMoviesList" />

        <TextView
            android:id="@+id/tv_movie_reviews_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="228dp"
            android:layout_marginEnd="53dp"
            android:gravity="center_vertical"
            android:text="@string/reviews_count"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/text_size_movie_tags"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/ivMoviesList"
            app:layout_constraintStart_toStartOf="@+id/ivMoviesList"
            app:layout_constraintTop_toTopOf="@+id/ivMoviesList" />

        <TextView
            android:id="@+id/tv_movie_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_2x"
            android:layout_marginTop="256dp"
            android:layout_marginEnd="@dimen/spacing_2x"
            android:gravity="center_vertical"
            android:textSize="@dimen/text_size_sub_title"
            android:textStyle="bold"
            android:textColor="@color/gradient_text"
            app:layout_constraintEnd_toEndOf="@+id/ivMoviesList"
            app:layout_constraintStart_toStartOf="@+id/ivMoviesList"
            app:layout_constraintTop_toTopOf="@+id/ivMoviesList"
            tools:text="@string/movie_name"/>

        <TextView
            android:id="@+id/tv_movie_duration"
            android:layout_width="154dp"
            android:layout_height="12dp"
            android:layout_marginStart="@dimen/spacing_2x"
            android:layout_marginTop="276dp"
            android:layout_marginEnd="@dimen/spacing_2x"
            android:gravity="center_vertical"
            android:text="@string/movie_duration"
            android:textColor="@color/gray_dark2"
            android:textSize="@dimen/text_size_movie_tags"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/ivMoviesList"
            app:layout_constraintStart_toStartOf="@+id/ivMoviesList"
            app:layout_constraintTop_toTopOf="@+id/ivMoviesList" />


    </androidx.constraintlayout.widget.ConstraintLayout>